<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <NumberPicker
            android:id="@+id/numberPickerIsWsSemesterFilterDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></NumberPicker>
        <NumberPicker
            android:id="@+id/numberPickerSemesterSemesterFilterDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></NumberPicker>
    </LinearLayout>

</RelativeLayout>