<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/episodeOptionBarDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/watchLaterLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewEpisodeWatchLater"
                android:layout_width="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_watch_later_black_24dp"
                android:tint="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/textViewEpisodeWatchLater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Watch later"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layoutEpisodeShare"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewEpisodeShare"
                android:layout_width="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share_black_24dp"
                android:tint="@android:color/darker_gray"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Share"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layoutEpisodeCopy"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewEpisodeCopyToClipboard"
                android:layout_width="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_content_copy_black_24dp"
                android:tint="@android:color/darker_gray"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Copy"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>