...
      android:layout_marginTop="4dp"
      android:text="14.12.2012"
      android:textSize="15sp"
      app:layout_constraintStart_toEndOf="@+id/imageViewThumbnailEpisode"
      app:layout_constraintTop_toBottomOf="@+id/textViewEpisodeOverviewItemTitle" />
    <ImageView
        android:id="@+id/imageViewEpisodeMore"
        android:layout_width="25dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_more_vert_black_24dp"
        android:tint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"/>

...
